--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,11 +4,22 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="title" content="Tree-Markable">
+    <meta name="description" content="Web app to share and discover remarkable trees in your community!">
+    <meta name="author" content="Justin Vendettuoli">
+    <!-- <meta name="image" content=""> -->
+    <meta property="og:type" content="website">
+    <!-- <meta property="og:url" content=""> -->
+    <meta property="og:title" content="Tree-Markable">
+    <meta property="og:description" content="Web app to share and discover remarkable trees in your community!">
+    <!-- <meta property="og:image" content=""> -->
+    <meta property="twitter:card" content="Web app to share and discover remarkable trees in your community!">
+    <!-- <meta property="twitter:url" content=""> -->
+    <meta property="twitter:title" content="Tree-Markable">
+    <meta property="twitter:description" content="Web app to share and discover remarkable trees in your community!">
+    <!-- <meta property="twitter:image" content="> -->
+
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +35,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <title>Tree-Markable</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
